--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_wrapper: false  # Important: disable wrapper to get raw outputs
+          terraform_wrapper: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -57,6 +57,24 @@ jobs:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
+
+      # --- NEW: Build the frontend ---
+      - name: Install frontend dependencies
+        run: npm ci
+        working-directory: ./frontend
+
+      - name: Build frontend
+        run: npm run build
+        working-directory: ./frontend
+
+      # --- NEW: Sync frontend build to S3 ---
+      - name: Upload frontend to S3
+        run: |
+          aws s3 sync ./frontend/dist \
+            s3://$(terraform -chdir=terraform output -raw s3_frontend_bucket)/ \
+            --delete
+        env:
+          AWS_REGION: ${{ secrets.DEFAULT_AWS_REGION }}
 
       - name: Run Deployment Script
         run: |
