--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,9 +26,11 @@ jobs:
     environment: ${{ github.event.inputs.environment || 'dev' }}
     
     steps:
+      # --- Checkout code ---
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # --- Configure AWS credentials ---
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -36,21 +38,24 @@ jobs:
           role-session-name: github-actions-deploy
           aws-region: ${{ secrets.DEFAULT_AWS_REGION }}
 
+      # --- Setup Python (for Lambda build) ---
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      - name: Install uv
+      - name: Install uv (for deployment script)
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
+      # --- Setup Terraform ---
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_wrapper: false
 
+      # --- Setup Node.js (for frontend) ---
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -58,7 +63,7 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
-      # --- Build Frontend ---
+      # --- Build frontend ---
       - name: Install frontend dependencies
         run: npm ci
         working-directory: ./frontend
@@ -67,7 +72,7 @@ jobs:
         run: npm run build
         working-directory: ./frontend
 
-      # --- Initialize Terraform with S3 backend ---
+      # --- Initialize Terraform backend (non-interactive) ---
       - name: Initialize Terraform
         working-directory: ./terraform
         run: |
@@ -77,7 +82,7 @@ jobs:
             -backend-config="region=${{ secrets.DEFAULT_AWS_REGION }}" \
             -reconfigure
 
-      # --- Deploy backend (Lambda, API Gateway, S3 buckets) ---
+      # --- Deploy backend (Lambda, API Gateway, S3 memory bucket) ---
       - name: Run Deployment Script
         run: |
           chmod +x scripts/deploy.sh
@@ -88,7 +93,7 @@ jobs:
       # --- Upload frontend to S3 ---
       - name: Upload frontend to S3
         run: |
-          FRONTEND_BUILD_DIR=./frontend/dist  # change to ./frontend/build if using CRA
+          FRONTEND_BUILD_DIR=./frontend/dist   # use ./frontend/build if using CRA
           BUCKET_NAME=$(terraform -chdir=terraform output -raw s3_frontend_bucket)
           aws s3 sync $FRONTEND_BUILD_DIR s3://$BUCKET_NAME/ --delete
         env:
