--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,11 +26,9 @@ jobs:
     environment: ${{ github.event.inputs.environment || 'dev' }}
     
     steps:
-      # --- Checkout code ---
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # --- Configure AWS credentials ---
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -38,24 +36,21 @@ jobs:
           role-session-name: github-actions-deploy
           aws-region: ${{ secrets.DEFAULT_AWS_REGION }}
 
-      # --- Setup Python (for Lambda build) ---
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      - name: Install uv (for deployment script)
+      - name: Install uv
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      # --- Setup Terraform ---
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_wrapper: false
+          terraform_wrapper: false  # Important: disable wrapper to get raw outputs
 
-      # --- Setup Node.js (for frontend) ---
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -63,56 +58,42 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
-      # --- Build frontend ---
-      - name: Install frontend dependencies
-        run: npm ci
-        working-directory: ./frontend
-
-      - name: Build frontend
-        run: npm run build
-        working-directory: ./frontend
-
-      # --- Initialize Terraform backend (non-interactive) ---
-      - name: Initialize Terraform
-        working-directory: ./terraform
-        run: |
-          terraform init \
-            -backend-config="bucket=${{ secrets.TF_BACKEND_BUCKET }}" \
-            -backend-config="key=twin-${{ github.event.inputs.environment || 'dev' }}/terraform.tfstate" \
-            -backend-config="region=${{ secrets.DEFAULT_AWS_REGION }}" \
-            -reconfigure
-
-      # --- Deploy backend (Lambda, API Gateway, S3 memory bucket) ---
       - name: Run Deployment Script
         run: |
+          # Set environment variables for the script
+          export AWS_ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
+          export DEFAULT_AWS_REGION=${{ secrets.DEFAULT_AWS_REGION }}
+          
+          # Make script executable and run it
           chmod +x scripts/deploy.sh
           ./scripts/deploy.sh ${{ github.event.inputs.environment || 'dev' }}
         env:
           AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
-
-      # --- Upload frontend to S3 ---
-      - name: Upload frontend to S3
-        run: |
-          FRONTEND_BUILD_DIR=./frontend/dist   # use ./frontend/build if using CRA
-          BUCKET_NAME=$(terraform -chdir=terraform output -raw s3_frontend_bucket)
-          aws s3 sync $FRONTEND_BUILD_DIR s3://$BUCKET_NAME/ --delete
-        env:
-          AWS_REGION: ${{ secrets.DEFAULT_AWS_REGION }}
-
-      # --- Get deployment URLs ---
+          
       - name: Get Deployment URLs
         id: deploy_outputs
         working-directory: ./terraform
         run: |
           terraform workspace select ${{ github.event.inputs.environment || 'dev' }}
+          echo "cloudfront_url=$(terraform output -raw cloudfront_url)" >> $GITHUB_OUTPUT
           echo "api_url=$(terraform output -raw api_gateway_url)" >> $GITHUB_OUTPUT
           echo "frontend_bucket=$(terraform output -raw s3_frontend_bucket)" >> $GITHUB_OUTPUT
-          echo "frontend_url=$(terraform output -raw frontend_url)" >> $GITHUB_OUTPUT
 
-      # --- Deployment Summary ---
+      - name: Invalidate CloudFront
+        run: |
+          DISTRIBUTION_ID=$(aws cloudfront list-distributions \
+            --query "DistributionList.Items[?Origins.Items[?DomainName=='${{ steps.deploy_outputs.outputs.frontend_bucket }}.s3-website-${{ secrets.DEFAULT_AWS_REGION }}.amazonaws.com']].Id | [0]" \
+            --output text)
+          
+          if [ "$DISTRIBUTION_ID" != "None" ] && [ -n "$DISTRIBUTION_ID" ]; then
+            aws cloudfront create-invalidation \
+              --distribution-id $DISTRIBUTION_ID \
+              --paths "/*"
+          fi
+
       - name: Deployment Summary
         run: |
           echo "✅ Deployment Complete!"
-          echo "🌐 Frontend (S3 website): ${{ steps.deploy_outputs.outputs.frontend_url }}"
+          echo "🌐 CloudFront URL: ${{ steps.deploy_outputs.outputs.cloudfront_url }}"
           echo "📡 API Gateway: ${{ steps.deploy_outputs.outputs.api_url }}"
           echo "🪣 Frontend Bucket: ${{ steps.deploy_outputs.outputs.frontend_bucket }}"
